# akeyless-terraform-resources

./: .gitignore  CLAUDE.md  flake.nix  forge-gen.toml  provider.toml
.github/workflows/: ci.yml.disabled  update-gen-inputs.yml
data_sources/: account_custom_fields.toml  auth_method.toml  auth_methods.toml  dynamic_secrets.toml  esm.toml  event_forwarder.toml  gateway_customer_fragments.toml  gateway_migrations.toml  gateway_producers.toml  gateway_rotated_secrets.toml  gateways.toml  group.toml  groups.toml  item.toml  items.toml  kmip_clients.toml  policies.toml  role.toml  roles.toml  rotated_secrets.toml  secret_value.toml  sra_bastions.toml  target.toml  targets.toml  usc.toml
resources/auth_methods/: auth_method_api_key.toml  auth_method_aws_iam.toml  auth_method_azure_ad.toml  auth_method_cert.toml  auth_method_email.toml  auth_method_gcp.toml  auth_method_huawei.toml  auth_method_k8s.toml  auth_method_kerberos.toml  auth_method_ldap.toml  auth_method_oauth2.toml  auth_method_oci.toml  auth_method_oidc.toml  auth_method_saml.toml  auth_method_universal_identity.toml
resources/dynamic_secrets/: dynamic_secret_artifactory.toml  dynamic_secret_aws.toml  dynamic_secret_azure.toml  dynamic_secret_cassandra.toml  dynamic_secret_custom.toml  dynamic_secret_dockerhub.toml  dynamic_secret_eks.toml  dynamic_secret_gcp.toml  dynamic_secret_github.toml  dynamic_secret_gitlab.toml  dynamic_secret_gke.toml  dynamic_secret_google_workspace.toml  dynamic_secret_hanadb.toml  (+15 more)
scripts/: sync-gen-repos.sh
tools/iac-verify/: Cargo.toml
tools/iac-verify/src/: main.rs
(+77 files in other folders)
